editting the proto
