# authservices/docs/swagger.yaml
@@ -19,6 +19,13 @@ definitions:
     - email
     - password
     type: object
+  userm.UserEmail:
+    properties:
+      email:
+        type: string
+    required:
+    - email
+    type: object
 host: localhost:8889
 info:
   contact:
@@ -68,6 +75,43 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: authenticate user
+      tags:
+      - Authentication
+  /api/v1/auth/verify:
+    post:
+      consumes:
+      - application/json
+      description: Verify if the user exist by supplying email
+      parameters:
+      - description: User Data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/userm.UserEmail'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/userm.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: verify user by email
       tags:
       - Authentication
 securityDefinitions:
