# authservices/models/userm/userm.go
@@ -43,3 +43,7 @@ type UserDetails struct {
 	Password string `json:"password"  binding:"required"`
 	Token string `json:"token"  binding:"required"`
 }
+
+type UserEmail struct {
+	Email     string `json:"email"  binding:"required"`
+}
